- Fixed bug #33125 (imagecopymergegray() produces mosaic rainbow effect).
  (Pierre)
- Fixed bug #32981 (ReflectionMethod::getStaticVariables() causes apache2.0.54
  seg fault). (Dmitry)
- Fixed bug #32937 (open_basedir looses trailing / in the limiter). (Adam Conrad)
- Fixed bug #32589 (possible crash inside imap_mail_compose() function). (Ilia)
- Fixed bug #32179 (xmlrpc_encode() segfaults with recursive references). (Tony)
- Fixed bug #32139 (SOAP client does not auto-handle base64 encoding). (Ilia)
- Fixed bug #32010 (Memory leak in mssql_fetch_batch). (fmk)
- Fixed bug #29334 (win32 mail() provides incorrect Date: header). (Jani)
- Fixed bug #29253 (array_diff with $GLOBALS argument fails). (Dmitry)
- Fixed bug #25359 (array_multisort() doesn't work in a function if array is
  global or reference). (Dmitry)
- Fixed bug #21306 (ext/sesssion: catch bailouts of write handler during
  RSHUTDOWN). (Jani, Xuefer at 21cn dot com)

14 Jul 2005, PHP 5.1 Beta 3
- Upgraded bundled SQLite library for PDO:SQLite to 3.2.2 (Ilia)
- Moved extensions to PECL:
  . ext/dbx         (Jani, Derick)
  . ext/ircg        (Jani, Derick)
- Added PDO_MYSQL_ATTR_USE_BUFFERED_QUERY parameter for pdo_mysql. (Ilia)
- Added date_timezone_set() function to set the timezone that the date
  functions will use. (Derick)
- Added pg_fetch_all_columns() function to fetch all values of a column from
  a result cursor. (Ilia)
- Added support for LOCK_EX flag for file_put_contents(). (Ilia)
- Implemented feature request #33452 (Year belonging to ISO week). (Derick)
- Fixed support for shared extensions on AIX. (Dmitry)
- Fixed memory corruption in pg_copy_from() in case the as_null parameter was
  passed. (Derick)
- Fixed crash inside stream_get_line() when length parameter equals 0. (Ilia)
- Fixed bug #33673 (Added detection for partially uploaded files). (Ilia)
- Fixed bug #33605 (substr_compare() crashes with negative offset and length). 
  (Tony)